--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "openai": "^4.71.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
